Added test page and database connection

--- a/Confidential-Eternal-Pottery/Views/Home/Index.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Home/Index.cshtml
@@ -19,6 +19,13 @@
     </section>
 }
 <h3>We suggest the following:</h3>
+@{
+    foreach (var item in ViewBag.Model)
+    {
+        <h2>@item.Number</h2>
+    }
+}
+
 <ol class="round">
     <li class="one">
         <h5>Getting Started</h5>
