--- a/Confidential-Eternal-Pottery/Views/Room/Create.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Room/Create.cshtml
@@ -2,7 +2,29 @@
 
 @{
     ViewBag.Title = "Create";
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem
+     {
+         Text = "Two",
+         Value = "2"
+     });
+    listItems.Add(new SelectListItem
+    {
+        Text = "Three",
+        Value = "3"
+    });
+    listItems.Add(new SelectListItem
+            {
+                Text = "Five",
+                Value = "5"
+            });
 }
+
+<style>
+    select {
+        Color: black;
+    }
+</style>
 
 <h2>Create</h2>
 
@@ -16,14 +38,22 @@
         </div>
         <div class="editor-field">
             @Html.TextBoxFor(model => model.Number)
+            @Html.ValidationMessageFor(model => model.Number)
         </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.Capacity)
         </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.Number)
+        @Html.DropDownList("Capacity", listItems)
+        @Html.ValidationMessageFor(model => model.Capacity)
+        <div class="editor-label">
+            @Html.LabelFor(model => model.MinimumPrice)
         </div>
+        <div class="editor-field">
+            @Html.TextBoxFor(model => model.MinimumPrice)
+            @Html.ValidationMessageFor(model => model.MinimumPrice)
 
+        </div>
+        <br />
         <input type="submit" value="Create new room" />
     </fieldset>
 }
