--- a/Confidential-Eternal-Pottery/Views/Room/Update.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Room/Update.cshtml
@@ -1,6 +1,57 @@
-﻿@{
+﻿@model ConfidentialEternalPottery.Models.Room
+@{
     ViewBag.Title = "Update";
-    ConfidentialEternalPottery.Models.Room room = (ConfidentialEternalPottery.Models.Room) ViewBag.Room;
+    ConfidentialEternalPottery.Models.Room room = (ConfidentialEternalPottery.Models.Room)ViewBag.Model;
+}
+
+@{
+    ViewBag.Title = "Create";
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem
+     {
+         Text = "Two",
+         Value = "2"
+     });
+    listItems.Add(new SelectListItem
+    {
+        Text = "Three",
+        Value = "3"
+    });
+    listItems.Add(new SelectListItem
+    {
+        Text = "Five",
+        Value = "5"
+    });
 }
 
 <h2>Update</h2>
+@using (Html.BeginForm())
+{
+    @Html.ValidationSummary(true)
+    <fieldset>
+        <legend>Room</legend>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Number)
+        </div>
+        <div class="editor-field">
+            @Html.TextBoxFor(model => model.Number, new { Value = room.Number })
+            @Html.ValidationMessageFor(model => model.Number)
+        </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Capacity)
+        </div>
+        @Html.DropDownList("Capacity", new SelectList(listItems, "Value", "Text", room.Capacity.ToString()), room.Capacity)
+        @Html.ValidationMessageFor(model => model.Capacity)
+        <div class="editor-label">
+            @Html.LabelFor(model => model.MinimumPrice)
+        </div>
+        <div class="editor-field">
+            @Html.TextBoxFor(model => model.MinimumPrice, new { Value = room.MinimumPrice })
+            @Html.ValidationMessageFor(model => model.MinimumPrice)
+
+        </div>
+        <br />
+        <input type="submit" value="Save changes" />
+    </fieldset>
+}
+
