--- a/Confidential-Eternal-Pottery/Views/Room/Index.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Room/Index.cshtml
@@ -38,7 +38,7 @@
         <th class="tg-031e">Number</th>
         <th class="tg-031e">Capacity</th>
         <th class="tg-031e">MinimumPrice</th>
-        <th class="tg-031e">CustomPrices</th>
+        <th class="tg-031e"></th>
         <th class="tg-031e"></th>
         <th class="tg-031e"></th>
     </tr>
@@ -50,7 +50,7 @@
                 <td class="tg-031e">@item.Number</td>
                 <td class="tg-031e">@item.Capacity</td>
                 <td class="tg-031e">@item.MinimumPrice</td>
-                <td class="tg-031e"></td>
+                <td class="tg-031e"><button onclick="location.href = '@Url.Action("Index", "PriceMoment", new { roomId = @item.RoomId })'" style="color: grey;">Custom Pricing</button></td>
                 <td class="tg-031e"><button onclick="location.href = '@Url.Action("Update", "Room", new { roomId = @item.RoomId })'" style="color: grey;">Update</button></td>
                 <td class="tg-031e"><button onclick="location.href = '@Url.Action("Delete", "Room", new { roomId = @item.RoomId })'" style="color: grey;">Delete</button></td>
             </tr>
