--- a/Confidential-Eternal-Pottery/Views/PriceMoment/Index.cshtml
+++ b/Confidential-Eternal-Pottery/Views/PriceMoment/Index.cshtml
@@ -50,7 +50,7 @@
                 <td class="tg-031e">@item.To</td>
                 <td class="tg-031e">@item.Price</td>
                 <td class="tg-031e"><button onclick="location.href = '@Url.Action("Index", "PriceMoment", new { roomId = @room.RoomId })'" style="color: grey;">Custom Pricing</button></td>
-                <td class="tg-031e"><button onclick="location.href = '@Url.Action("Update", "PriceMoment", new { roomId = @room.RoomId })'" style="color: grey;">Update</button></td>
+                <td class="tg-031e"><button onclick="location.href = '@Url.Action("Update", "PriceMoment", new { priceMomentId = @item.PriceMomentId })'" style="color: grey;">Update</button></td>
                 <td class="tg-031e"><button onclick="location.href = '@Url.Action("Delete", "PriceMoment", new { priceMomentId = @item.PriceMomentId, roomId = @room.RoomId })'" style="color: grey;">Delete</button></td>
             </tr>
         }
