--- a/Confidential-Eternal-Pottery/Views/PriceMoment/Update.cshtml
+++ b/Confidential-Eternal-Pottery/Views/PriceMoment/Update.cshtml
@@ -6,19 +6,24 @@
 
 <h2>Update</h2>
 
-@using (Html.BeginForm())
-{
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
         <legend>PriceMoment</legend>
+        @Html.HiddenFor(model => model.Room)
         @Html.HiddenFor(model => model.RoomId)
+        @Html.HiddenFor(model => model.Room.Bookings)
+        @Html.HiddenFor(model => model.Room.Capacity)
+        @Html.HiddenFor(model => model.Room.MinimumPrice)
+        @Html.HiddenFor(model => model.Room.Number)
+        @Html.HiddenFor(model => model.Room.Prices)
         <div class="editor-label">
             @Html.LabelFor(model => model.Price)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Price, new { Value = Model.Price })
+            @Html.EditorFor(model => model.Price)
             @Html.ValidationMessageFor(model => model.Price)
         </div>
 
@@ -39,13 +44,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Update" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Return to overview", "Index", "PriceMoment", new { roomId = Model.RoomId }, null)
 </div>
 
 @section Scripts {
