--- a/Confidential-Eternal-Pottery/Views/Booking/SetDate.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Booking/SetDate.cshtml
@@ -12,6 +12,8 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     @Html.HiddenFor(model => model.Room.RoomId)
+    @Html.HiddenFor(model => model.Room.Number)
+    @Html.HiddenFor(model => model.Price)
 
     <fieldset>
         <legend>Nights</legend>
@@ -69,13 +71,6 @@
                 @Html.ValidationMessageFor(model => model.Email)
             </div>
         </div>
-
-
-        <div class="form-group">
-            <div class="col-sm-offset-10 col-sm-2 pull-right">
-                <button type="submit" class="btn btn-default">Book room</button>
-            </div>
-        </div>
     </fieldset>
     <fieldset>
         <legend>Guests</legend>
@@ -95,46 +90,13 @@
                 @Html.ValidationMessageFor(m => m.NumGuest)
             </div>
         </div>
-
-
-        @for (int i = 0; i < Model.Guests.Count(); i++)
-        {
-            <div class="form-group">
-                @Html.LabelFor(m => m.Guests.ElementAt(i).FirstName, new { @class = "col-sm-2 control-label" })
-
-                <div class="col-sm-10">
-                    @Html.TextBoxFor(m => m.Guests.ElementAt(i).FirstName, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Guests.ElementAt(i).FirstName)
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Guests.ElementAt(i).LastName, new { @class = "col-sm-2 control-label" })
-
-                <div class="col-sm-10">
-                    @Html.TextBoxFor(m => m.Guests.ElementAt(i).LastName, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Guests.ElementAt(i).LastName)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Guests.ElementAt(i).Dob, new { @class = "col-sm-2 control-label" })
-
-                <div class="col-sm-10">
-                    @Html.TextBoxFor(m => m.Guests.ElementAt(i).Dob, new { @class = "form-control", type = "date" })
-                    @Html.ValidationMessageFor(m => m.Guests.ElementAt(i).Dob)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Guests.ElementAt(i).Gender, new { @class = "col-sm-2 control-label" })
-
-                <div class="col-sm-10">
-                    @Html.DropDownListFor(m => m.Guests.ElementAt(i).Gender, new SelectList(Enum.GetValues(typeof(ConfidentialEternalPottery.Models.Genders))))
-                    @Html.ValidationMessageFor(m => m.Guests.ElementAt(i).Gender)
-                </div>
-            </div>
-        }
     </fieldset>
+    
+    <div class="form-group">
+            <div class="col-sm-offset-10 col-sm-2 pull-right">
+                <button type="submit" class="btn btn-default">Add guests</button>
+            </div>
+        </div>
 }
 
 <div>
