--- a/Confidential-Eternal-Pottery/Views/PriceMoment/Update.cshtml
+++ b/Confidential-Eternal-Pottery/Views/PriceMoment/Update.cshtml
@@ -16,6 +16,7 @@
         @Html.HiddenFor(model => model.Room.MinimumPrice)
         @Html.HiddenFor(model => model.Room.Capacity)
         @Html.HiddenFor(model => model.Room.Number)
+        @Html.HiddenFor(model => model.Room.MinimumPrice)
         <div class="editor-label">
             @Html.LabelFor(model => model.Price)
         </div>
