--- a/Confidential-Eternal-Pottery/Views/Home/Index.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Home/Index.cshtml
@@ -16,11 +16,21 @@
                         <p>A nice weekend away for just the two of you? Check out our nice spacious double rooms!</p>
                     </div>
                     <div class="panel-body">
-                        Lorum
-                        @Html.ActionLink("Book room " + room.Number, "SetDate", "Booking", new { id = room.RoomId }, new { @class = "btn btn-primary pull-right" })
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <h1><i class="fa fa-eur"></i>@room.MinimumPrice <small>Per night</small></h1>
+                            </div>
+                            <div class="col-sm-8 text-right">
+                                @if (Request.IsAuthenticated)
+                                {
+                                    @Html.ActionLink("Edit room " + room.Number, "Update", "Room", new { roomId = room.RoomId }, new { @class = "btn btn-info" })
+                                }
+                                @Html.ActionLink("Book room " + room.Number, "SetDate", "Booking", new { id = room.RoomId }, new { @class = "btn btn-primary" })
+                            </div>
+                        </div>
                     </div>
                 </div>
-                break;
+                                break;
             case 3:
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -28,11 +38,21 @@
                     <p>A nice room for three people.</p>
                 </div>
                 <div class="panel-body">
-                    Lorum
-                    @Html.ActionLink("Book room " + room.Number, "SetDate", "Booking", new { id = room.RoomId }, new { @class = "btn btn-primary pull-right" })
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h1><i class="fa fa-eur"></i>@room.MinimumPrice <small>Per night</small></h1>
+                        </div>
+                        <div class="col-sm-8 text-right">
+                            @if (Request.IsAuthenticated)
+                            {
+                                @Html.ActionLink("Edit room " + room.Number, "Update", "Room", new { roomId = room.RoomId }, new { @class = "btn btn-info" })
+                            }
+                            @Html.ActionLink("Book room " + room.Number, "SetDate", "Booking", new { id = room.RoomId }, new { @class = "btn btn-primary" })
+                        </div>
+                    </div>
                 </div>
             </div>
-                break;
+                            break;
 
             case 5:
             <div class="panel panel-default">
@@ -41,11 +61,21 @@
                     <p>Planning a holiday for the whole family? This rooms sleeps 2 adults and 3 children.</p>
                 </div>
                 <div class="panel-body">
-                    Lorum
-                    @Html.ActionLink("Book room " + room.Number, "SetDate", "Booking", new { id = room.RoomId }, new { @class = "btn btn-primary pull-right" })
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h1><i class="fa fa-eur"></i>@room.MinimumPrice <small>Per night</small></h1>
+                        </div>
+                        <div class="col-sm-8 text-right">
+                            @if (Request.IsAuthenticated)
+                            {
+                                @Html.ActionLink("Edit room " + room.Number, "Update", "Room", new { roomId = room.RoomId }, new { @class = "btn btn-info" })
+                            }
+                            @Html.ActionLink("Book room " + room.Number, "SetDate", "Booking", new { id = room.RoomId }, new { @class = "btn btn-primary" })
+                        </div>
+                    </div>
                 </div>
             </div>
-                break;
+                            break;
         }
 
     }
