--- a/Confidential-Eternal-Pottery/Views/Room/Delete.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Room/Delete.cshtml
@@ -1,41 +1,26 @@
 ﻿@model ConfidentialEternalPottery.Models.Room
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Room";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title @Model.Number</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Room</legend>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Capacity)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Capacity)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Number)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Number)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.MinimumPrice)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.MinimumPrice)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
-    <p>
-        @Html.HiddenFor(model => model.RoomId)
-        <button onclick="location.href = '@Url.Action("Index", "PriceMoment", new { room = Model })'" style="color: grey;">Delete</button>
-    </p>
+    <div class="well">
+        <div class="row">
+            <div class="col-md-10">
+                Are you sure you want to delete this room @Model.Number?
+            </div>
+            <div class="col-md-2">
+                <input type="submit" class="btn btn-danger" value="Delete room" />
+            </div>
+        </div>
+    </div>
+
+    @Html.HiddenFor(model => model.RoomId)
 }
 @Html.ActionLink("Back to List", "Index")
