--- a/Confidential-Eternal-Pottery/Views/Room/Update.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Room/Update.cshtml
@@ -1,10 +1,9 @@
 ﻿@model ConfidentialEternalPottery.Models.Room
 @{
-    ViewBag.Title = "Update";
+    ViewBag.Title = "Update Room";
 }
 
 @{
-    ViewBag.Title = "Create";
     List<SelectListItem> listItems = new List<SelectListItem>();
     listItems.Add(new SelectListItem
      {
@@ -23,35 +22,36 @@
     });
 }
 
-<h2>Update</h2>
-@using (Html.BeginForm())
+<h2>@ViewBag.Title @Model.Number</h2>
+@using (Html.BeginForm("Update", "Room", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-    <fieldset>
-        <legend>Room</legend>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Number)
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.Number, new { Value = Model.Number })
+
+    @Html.HiddenFor(model => model.RoomId);
+    <div class="form-group">
+        @Html.LabelFor(model => model.Number, new { @class = "col-sm-2 control-label" })
+        <div class="col-sm-10">
+            @Html.TextBoxFor(model => model.Number, new { type = "number", @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Number)
         </div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Capacity)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Capacity, new { @class = "col-sm-2 control-label" })
+        <div class="col-sm-10">
+            @Html.DropDownListFor(model => model.Capacity, listItems, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Capacity)
         </div>
-        @Html.DropDownList("Capacity", new SelectList(listItems, "Value", "Text", Model.Capacity.ToString()), Model.Capacity)
-        @Html.ValidationMessageFor(model => model.Capacity)
-        <div class="editor-label">
-            @Html.LabelFor(model => model.MinimumPrice)
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.MinimumPrice, new { Value = Model.MinimumPrice })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.MinimumPrice, new { @class = "col-sm-2 control-label" })
+        <div class="col-sm-10">
+            @Html.TextBoxFor(model => model.MinimumPrice, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.MinimumPrice)
-
         </div>
-        <br />
-        <input type="submit" value="Save changes" />
-    </fieldset>
+    </div>
+    <div class="form-group">
+        <button type="submit" class="col-sm-3 pull-right btn btn-default">Save changes</button>
+    </div>
 }
 
