--- a/Confidential-Eternal-Pottery/Views/Shared/_Layout.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     @Styles.Render("~/Content/css")
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<!--@Html.Partial("_LoginPartial")-->
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -22,13 +22,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Hotel CEP", "Index", "Home", new { @class = "navbar-brand" })
+                <a href="/" class="navbar-brand">Hotel CEP</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    @Html.Partial("_LoginPartial")
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
