--- a/Confidential-Eternal-Pottery/Views/Shared/_LoginPartial.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Shared/_LoginPartial.cshtml
@@ -1,14 +1,20 @@
-﻿@if (Request.IsAuthenticated) {
-    <text>
-        Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
-        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
+﻿@if (Request.IsAuthenticated)
+{
+    <li>
+        @Html.ActionLink("Manage account", "Manage", "Account")
+    </li>
+    <li>
+        @Html.ActionLink("Manage rooms", "Index", "Room")
+    </li>
+    <li>
+        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+        {
             @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
         }
-    </text>
-} else {
-    <ul>
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+        <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+    </li>
+}
+else
+{
+    <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
 }
