Fix PriceMoment for room list

--- a/Confidential-Eternal-Pottery/Views/Home/Index.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-sm-4">
-                                <h1><i class="fa fa-eur"></i>@room.MinimumPrice <small>Per night</small></h1>
+                                <h1><i class="fa fa-eur"></i>@room.Price <small>Per night</small></h1>
                             </div>
                             <div class="col-sm-8 text-right">
                                 @if (Request.IsAuthenticated)
@@ -40,7 +40,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-sm-4">
-                            <h1><i class="fa fa-eur"></i>@room.MinimumPrice <small>Per night</small></h1>
+                            <h1><i class="fa fa-eur"></i>@room.Price <small>Per night</small></h1>
                         </div>
                         <div class="col-sm-8 text-right">
                             @if (Request.IsAuthenticated)
@@ -63,7 +63,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-sm-4">
-                            <h1><i class="fa fa-eur"></i>@room.MinimumPrice <small>Per night</small></h1>
+                            <h1><i class="fa fa-eur"></i>@room.Price <small>Per night</small></h1>
                         </div>
                         <div class="col-sm-8 text-right">
                             @if (Request.IsAuthenticated)
