--- a/Confidential-Eternal-Pottery/Views/Account/Login.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfidentialEternalPottery.Models.LoginModel
+﻿@model ConfidentialEternalPottery.DomainModel.Models.LoginModel
 
 @{
     ViewBag.Title = "Log in";
