--- a/Confidential-Eternal-Pottery/Views/Account/Register.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfidentialEternalPottery.Models.RegisterModel
+﻿@model ConfidentialEternalPottery.DomainModel.Models.RegisterModel
 @{
     ViewBag.Title = "Register";
 }
