--- a/Confidential-Eternal-Pottery/Views/PriceMoment/Create.cshtml
+++ b/Confidential-Eternal-Pottery/Views/PriceMoment/Create.cshtml
@@ -22,7 +22,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.From, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
-            @Html.TextBoxFor(model => model.Price, new { type = "date", @class = "form-control" })
+            @Html.TextBoxFor(model => model.From, new { type = "date", @class = "form-control" })
             @Html.ValidationMessageFor(model => model.From)
         </div>
     </div>
