--- a/Confidential-Eternal-Pottery/Views/PriceMoment/Index.cshtml
+++ b/Confidential-Eternal-Pottery/Views/PriceMoment/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfidentialEternalPottery.Models.Room
+﻿@model ConfidentialEternalPottery.DomainModel.Models.Room
 
 @{
     ViewBag.Title = "Pricing periods for room";
