--- a/Confidential-Eternal-Pottery/Views/PriceMoment/Update.cshtml
+++ b/Confidential-Eternal-Pottery/Views/PriceMoment/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfidentialEternalPottery.Models.PriceMoment
+﻿@model ConfidentialEternalPottery.DomainModel.Models.PriceMoment
 
 @{
     ViewBag.Title = "Update";
