--- a/Confidential-Eternal-Pottery/Views/Room/Index.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Room/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ConfidentialEternalPottery.Models.Room>
+﻿@model IEnumerable<ConfidentialEternalPottery.DomainModel.Models.Room>
 @{
     ViewBag.Title = "Room Overview";
 }
