--- a/Confidential-Eternal-Pottery/Views/Account/Manage.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConfidentialEternalPottery.Models.LocalPasswordModel
+﻿@model ConfidentialEternalPottery.DomainModel.Models.LocalPasswordModel
 @{
     ViewBag.Title = "Manage Account";
 }
