--- a/Confidential-Eternal-Pottery/Views/Booking/AddGuests.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Booking/AddGuests.cshtml
@@ -18,7 +18,7 @@
             @Html.LabelFor(m => m.FirstName, new { @class = "col-sm-2 control-label" })
 
             <div class="col-sm-10">
-                @Html.EditorFor(m => m.FirstName, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.FirstName)
             </div>
         </div>
@@ -26,7 +26,7 @@
             @Html.LabelFor(m => m.LastName, new { @class = "col-sm-2 control-label" })
 
             <div class="col-sm-10">
-                @Html.EditorFor(m => m.LastName, new { @class = "form-control" })
+                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.LastName)
             </div>
         </div>
@@ -35,7 +35,7 @@
             @Html.LabelFor(m => m.Dob, new { @class = "col-sm-2 control-label" })
 
             <div class="col-sm-10">
-                @Html.EditorFor(m => m.Dob, new { @class = "form-control", type = "date" })
+                @Html.TextBoxFor(m => m.Dob, new { @class = "form-control", type = "date" })
                 @Html.ValidationMessageFor(m => m.Dob)
             </div>
         </div>
@@ -44,7 +44,7 @@
             @Html.LabelFor(m => m.Gender, new { @class = "col-sm-2 control-label" })
 
             <div class="col-sm-10">
-                @Html.DropDownListFor(m => m.Gender, new SelectList(Enum.GetValues(typeof(ConfidentialEternalPottery.Models.Genders))))
+                @Html.DropDownListFor(m => m.Gender, new SelectList(Enum.GetValues(typeof(ConfidentialEternalPottery.Models.Genders))), new { @class = "form-control"})
                 @Html.ValidationMessageFor(m => m.Gender)
             </div>
         </div>
@@ -53,7 +53,7 @@
     <div class="form-group">
         <div class="col-sm-offset-10 col-sm-2 pull-right">
 
-            <button type="submit" class="btn btn-default">View booking</button>
+            <button type="submit" class="btn btn-default">Next</button>
         </div>
     </div>
 }
