--- a/Confidential-Eternal-Pottery/Views/Shared/_Layout.cshtml
+++ b/Confidential-Eternal-Pottery/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/bundles/jqueryui")
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -37,6 +38,8 @@
         @RenderBody()
     </div><!-- /.container -->
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/datatables")
     @RenderSection("scripts", required: false)
 </body>
 </html>
